// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lane B1 — components (golden, 390 phone) EntityActionSheet on iOS renders nothing (the native sheet owns the UI) 1`] = `
{
  "lines": 312,
  "sha256": "2013aa66de0a596fc2cce854dea271fcb6b9aa6b9b98138073bc2d83acb22f28",
}
`;

exports[`lane B1 — components (golden, 390 phone) EntityActionSheet project ref, android 390 1`] = `
{
  "lines": 352,
  "sha256": "dadf5bc33c34b9d90870f17da866530df08a4c1994445d809368e549159389c4",
}
`;

exports[`lane B1 — components (golden, 390 phone) EntityActionSheet project ref, web 390 1`] = `
{
  "lines": 352,
  "sha256": "b8d7f0e8bcd142eb48bc713dc751bf28b5be46c084e10e4794e469d9b01e2ba3",
}
`;

exports[`lane B1 — components (golden, 390 phone) EntityActionSheet rfi ref, android 390 1`] = `
{
  "lines": 360,
  "sha256": "5e1adc0d3afcab36b8c9b5be11d9dbe3b37bb9a9d55f972ed276019de74dfd9e",
}
`;

exports[`lane B1 — components (golden, 390 phone) EntityActionSheet rfi ref, web 390 1`] = `
{
  "lines": 360,
  "sha256": "58e49db2f21507cda11fba949fdb6fbcbdd9fdee2cc2fa6b3be7f354f04f3f2b",
}
`;

exports[`lane B1 — components (golden, 390 phone) RecordPaymentModal, open (iOS) 1`] = `
{
  "lines": 377,
  "sha256": "c4346fada34cca392b72ac917f09f7b85752610de8806177312225f6102f1fef",
}
`;

exports[`lane B1 — the phone is unchanged (golden, 390 × 844 iOS) budget-dashboard 1`] = `
{
  "lines": 466,
  "sha256": "778a4836b8681ba449a6f6b97a00dfdb7f6c75e614e55a413cb9f96addc6323a",
}
`;

exports[`lane B1 — the phone is unchanged (golden, 390 × 844 iOS) cash-flow (no project) 1`] = `
{
  "lines": 732,
  "sha256": "cd4346cac10582aa70cc61250a818041b9b533642249fa67bf4602f7b59517b7",
}
`;

exports[`lane B1 — the phone is unchanged (golden, 390 × 844 iOS) cash-flow with a project (balance, expense, payment sheets) 1`] = `
{
  "lines": 736,
  "sha256": "17c9539d3eaf89efe79540abb317a8036787e1c5a936a6cbb65c138c4c4751f8",
}
`;

exports[`lane B1 — the phone is unchanged (golden, 390 × 844 iOS) job-costing (commitment editor + phase sheet mounted) 1`] = `
{
  "lines": 775,
  "sha256": "4feeee415e7e21d413cf7c7f69a508bfa3d0670609e5d3ae6a0a812634e5822c",
}
`;

exports[`lane B1 — the phone is unchanged (golden, 390 × 844 iOS) job-costing: the first phase pressed (PhaseDetailModal open) 1`] = `
{
  "lines": 827,
  "sha256": "2c6e2c9425c196c0e286b48c01b81e930d28267201b30036025de25056175e1c",
}
`;
